# mahgar.io

docs/: GDD_Nolan.md  classdiagram.graphml  logboek_nolan.md  projectplan_nolan.md
raylib-cpp/: CMakeLists.txt
raylib-cpp/Maghar/: blob.cpp  blob.h  main.cpp  player.cpp  player.h  ploinc.cpp  ploinc.h  scene01.cpp  scene01.h  uielement.cpp  uielement.h
raylib-cpp/headers/: config.h  core.h  entity.h  main.h  scene.h
raylib-cpp/libs/raylib/src/: raylib.h  rcore.c  rtext.c
raylib-cpp/maghar-lib/headers/: blob.h  config.h  core.h  enemy.h  entity.h  player.h  rescourcemanager.h  scene.h  uielement.h
raylib-cpp/maghar-lib/src/: blob.cpp  core.cpp  enemy.cpp  entity.cpp  player.cpp  rescourcemanager.cpp  scene.cpp  uielement.cpp
raylib-cpp/src/: core.cpp  entity.cpp  main.cpp  scene.cpp
